kubernetes/prod/backend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend-service
  labels:
    app: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 1111
      targetPort: 5000
