kubernetes/prod/frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
  labels:
    app: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 2222
      targetPort: 80
