kubernetes/prod/frontend-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-route
spec:
  hosts:
    - frontend.rootshell.my.id
  gateways:
    - learning-gateway
  http:
    - name: "frontend-v1-routes"
      match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: frontend-service.default.svc.cluster.local
            port:
              number: 2222
